--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
-
+        <activity
+            android:name=".ui.login.ClienteLoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_cliente_login" />
         <activity
             android:name=".ListaClienteActivity"
             android:parentActivityName=".ClienteActivity" />
