--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText">
         <activity
+            android:name=".UpdateDatabaseActivity"
+            android:exported="false"
+            android:label="@string/title_activity_update_database"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MenuActivity"
+            android:exported="false"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".ui.login.ClienteLoginActivity"
             android:exported="true"
             android:label="@string/title_activity_cliente_login" />
